--- a/style.css
+++ b/style.css
@@ -76,7 +76,12 @@ form div{
     justify-content: center;
     align-items: center;
 }
-form div button{
+.sub{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.sub button{
     border: none;
     padding: 5px 10px;
     font-size: 20px;
@@ -85,7 +90,7 @@ form div button{
     color: #fff;
     font-weight: bold;
 }
-form div button:hover{
+.sub button:hover{
     background: linear-gradient(-45deg,rgb(255, 45, 161),rgb(30, 14, 255));
     color: #000;
     box-shadow: 3px 2px rgba(0, 0, 0, 0.274);
